# 3d-engine

./: .hgignore  CMakeLists.txt  README.md
NH2012/: CMakeLists  CMakeLists.txt  NH2012.sln  README  README.md
NH2012/Client/: Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters
NH2012/Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  QtOISConversion.h  dataitem.cpp  dataitem.h  datamodel.cpp  datamodel.h  datawrapper.cpp  datawrapper.h  editor.cpp  editor.h  editor.ui  main.cpp  renderer.cpp  renderer.h
NH2012/Engine/: AI.cpp  AI.h  Actor.cpp  Actor.h  Apparel.h  Architecture.cpp  Architecture.h  ArchitectureManager.cpp  ArchitectureManager.h  Bar.cpp  Bar.h  BasicComponent.cpp  BasicComponent.h  BoidComponent.cpp  BoidComponent.h  BoidExtension.cpp  BoidExtension.h  CameraComponent.cpp  CameraComponent.h  Cell.cpp  Cell.h  Chest.cpp  Chest.h  ComponentContainer.h  ComponentList.cpp  ComponentList.h  Console.cpp  Console.h  ConsoleScreen.cpp  ConsoleScreen.h  Container.h  ControlManager.cpp  ControlManager.h  ControlMap.h  Controls.h  Creature.cpp  CursorScreen.cpp  CursorScreen.h  DataManager.cpp  DataManager.h  (+154 more)
NH2012/Generator/: Corridor.cpp  Corridor.h  Dungeon.cpp  Dungeon.h  Entrance.cpp  Entrance.h  Generator.vcxproj  Generator.vcxproj.filters  Name.cpp  Name.h  Perlin2D.cpp  Perlin2D.h  Perlin3D.cpp  Perlin3D.h  Point.h  Room.cpp  Room.h
NH2012/Media/: Lights.material  Material.003.material  actor.material  actor.mesh  basic.level  brutalist.scene  cave.scene  crate.mesh  default.level  game.ini  hall.mesh  hall_2way.mesh  hall_3way.material  hall_3way.mesh  hall_4way.mesh  hall_endcap.mesh  hall_stairs.mesh  hall_tall.mesh  hall_tall_entrance.mesh  item.mesh  lightbulb.material  menu.level  nh2012.ini  orange.mesh  plaster1.material  r6.mesh  red_carpet.material  room_centre.mesh  room_corner.material  room_corner.mesh  room_corner_entrance_a.material  room_corner_entrance_a.mesh  room_corner_entrance_b.mesh  room_corner_entrance_two_way.mesh  room_corner_single.material  room_corner_single.mesh  room_edge.mesh  room_edge_entrance.mesh  simple.level  sun.particle  (+9 more)
NH2012/NH2012/: Attributes.cpp  Attributes.h  Bar.h  CMakeLists.txt  Client.cpp  Client.h  Core.cpp  Core.h  Diagram.cd  Dungeon.h  Game.h  Inventory.cpp  Item.cpp  Item.h  MeshGenerator.cpp  MeshGenerator.h  Monster.cpp  Monster.h  Multiplayer.cpp  Multiplayer.h  NH2012.vcxproj  NH2012.vcxproj.filters  Receiver.cpp  Receiver.h  Server.cpp  Server.h  Singleplayer.cpp  Singleplayer.h  World.cpp  World.h
NH2012/NH2012GeneratorLib/: Corridor.cpp  Corridor.h  Dungeon.cpp  Dungeon.h  NH2012GeneratorLib.vcxproj  NH2012GeneratorLib.vcxproj.filters  Point.h  ReadMe.txt  Room.cpp  Room.h
NH2012/NH2012Lib/: AI.h  Actor.cpp  Actor.h  Architecture.cpp  Architecture.h  Attributes.h  Bar.cpp  Bar.h  Client.cpp  Client.h  DebugConsole.cpp  DebugConsole.h  Diagram.cd  Dungeon.cpp  Dungeon.h  Entity.cpp  Entity.h  Flag.cpp  Flag.h  Game.cpp  Game.h  GenerateCorridor.cpp  GenerateCorridor.h  GenerateDungeon.cpp  GenerateDungeon.h  GeneratePoint.h  GenerateRoom.cpp  GenerateRoom.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemData.cpp  ItemData.h  MeshGenerator.cpp  Monster.cpp  Monster.h  MonsterData.cpp  MonsterData.h  Multiplayer.cpp  (+17 more)
NH2012/NH2012Server/: AssemblyInfo.cpp  Form1.h  NH2012Server.cpp  NH2012Server.vcxproj  NH2012Server.vcxproj.filters  ReadMe.txt  ServerGUI.h  stdafx.cpp
NH2012/Server/: Server.cpp  Server.h  Server.vcxproj
NH2012/resources/: game.ini
NH2012Lib/: NH2012Lib.sdf  NH2012Lib.sln
NH2012Lib/NH2012Lib/: Monster.cpp  Monster.h  NH2012Lib.vcxproj  NH2012Lib.vcxproj.filters  Vector3.cpp  Vector3.h  monster.data
editor/: Editor.h  Editor.vcxproj
editor/GeneratedFiles/: ui_editor.h
engine/: Actor.cpp  Actor.h  Apparel.cpp  Apparel.h  Bar.cpp  Bar.h  BasicComponent.h  Button.h  CMakeLists.txt  CameraComponent.h  Chest.h  ConsoleScreen.cpp  Container.h  ControlMap.h  Creature.h  CursorScreen.cpp  DataManager.cpp  Effect.h  Endpoint.h  Engine.vcxproj  Explosion.h  FabricationManager.cpp  Flock.h  Goal.h  GraphicsManager.cpp  HumanoidSkeletonComponent.h  Identifiable.h  InitialisationParser.h  IntelligentMovementComponent.cpp  IntelligentMovementComponent.h  Interactive.cpp  Interactive.h  Interface.h  Item.h  Ivy.cpp  Ivy.h  KinematicMovementComponent.h  Light.h  LoadingScreen.h  LuaBind.h  (+34 more)
engine/Boids/: Boid.h  NamedObject.cpp  NamedObject.h  Obstacle.h  Vector.cpp
engine/Crowd/: Character.cpp  ConvexShapeObstacle.cpp  CylinderObstacle.cpp  OgreRecast.h  RecastInputGeom.h
engine/Crowd/Detour/: DetourNode.cpp
engine/Crowd/DetourCrowd/: DetourObstacleAvoidance.cpp  DetourPathCorridor.cpp  DetourPathQueue.cpp  DetourProximityGrid.cpp
engine/Crowd/DetourTileCache/: DetourTileCache.cpp  DetourTileCacheBuilder.cpp
engine/Crowd/Recast/: Recast.cpp  RecastContour.cpp  RecastMesh.cpp  RecastMeshDetail.cpp
game/: game.vcxproj  game.vcxproj.filters
resources/materials/: Entity.material  Material.004.material  Material.material  barrel.material  brutalist.material  cave.material  cave_1.material  debug_boxes.material  default.material  hall_4way.material  hall_stairs.material  mars.material  ogre.material  orange.material  orange_carpet.material  person_tux.material  plain_theatre.material  robot.material  room_edge.material  theatre_ivy.material  trigger.material  watermelon.material  wood_crate.material
resources/models/: 100mBox.mesh  10mBox.mesh  Entity.mesh  Plane.mesh  barrel.mesh  cave.mesh  chest.mesh  h4.mesh  hall.mesh  hall_4way.mesh  hall_4way_loft.mesh  hall_endcap.mesh  hall_stairs.mesh  hall_tall.mesh  hall_tall_entrance.mesh  item.mesh  lightbulb.mesh  lobby.mesh  r1.mesh  r12.mesh  r13.mesh  r14.mesh  r2.mesh  r3.mesh  r4.mesh  r5.mesh  r7.mesh  r8.mesh  r9.mesh  (+22 more)
server/: CMakeLists.txt  Server.cpp  Server.vcxproj.filters
(+95 files in other folders)
